# UnlockMusicProject_Archive

./: .gitignore  README.md  commit  main.py
.github/workflows/: CI.yaml
cli/: .drone.jsonnet  .drone.yml  config  packed-refs
cli/algo/kgm/: kgm.go
cli/algo/ncm/: meta.go  ncm.go
cli/algo/qmc/: key_mmkv.go  qmc_footer_musicex.go
cli/cmd/um/: main.go
cli/objects/pack/: pack-5e4cc8a48cf352f77c96d835b0fe104c6fb2221b.idx  pack-5e4cc8a48cf352f77c96d835b0fe104c6fb2221b.pack  pack-5e4cc8a48cf352f77c96d835b0fe104c6fb2221b.rev
go-mmkv/: config  packed-refs
go-mmkv/objects/pack/: pack-d8bd93bbd9fe9f2d1717c16fc4cb5d96d53d12f9.idx  pack-d8bd93bbd9fe9f2d1717c16fc4cb5d96d53d12f9.pack  pack-d8bd93bbd9fe9f2d1717c16fc4cb5d96d53d12f9.rev
hwyy-frida-dump/: README.MD  config  dump_keys.py  packed-refs  requirements.txt
hwyy-frida-dump/objects/pack/: pack-c8b222f500fd9da49c086d531c14b1993db76700.idx  pack-c8b222f500fd9da49c086d531c14b1993db76700.pack  pack-c8b222f500fd9da49c086d531c14b1993db76700.rev
joox-crypto/: README.md  config  package.json  packed-refs
joox-crypto/objects/pack/: pack-b97dcff3c34b93f3dba751f87eaee8196a49cdfe.idx  pack-b97dcff3c34b93f3dba751f87eaee8196a49cdfe.pack  pack-b97dcff3c34b93f3dba751f87eaee8196a49cdfe.rev
kgg-dec/: CMakeLists.txt  CMakePresets.json  LICENSE  config  packed-refs
kgg-dec/cmake/: SetupSQLite3.cmake
kgg-dec/objects/pack/: pack-15493ea06041633f231b12fb59113b39a5a774f3.idx  pack-15493ea06041633f231b12fb59113b39a5a774f3.pack  pack-15493ea06041633f231b12fb59113b39a5a774f3.rev
kgg-dec/src/infra/: infra.cpp  infra.h
kgg-dec/src/qmc2/: ekey.h  qmc2.h  qmc2_factory.cpp  qmc2_map.cpp
kgg-dec/src/tc_tea/: tc_tea.h
kgg-dec/src/utils/: cli.cpp  cli.h
lib_um_crypto_rust/: .editorconfig  Dockerfile  LICENSE_MIT  README.MD  config  packed-refs
lib_um_crypto_rust/.gitea/workflows/: build.yaml
lib_um_crypto_rust/objects/pack/: pack-56021081766c7ac694e870a59aba999ee543e334.idx  pack-56021081766c7ac694e870a59aba999ee543e334.pack  pack-56021081766c7ac694e870a59aba999ee543e334.rev
lib_um_crypto_rust/um_audio/: Cargo.toml
lib_um_crypto_rust/um_audio/src/: metadata.rs
lib_um_crypto_rust/um_crypto/joox/: Cargo.toml
lib_um_crypto_rust/um_crypto/kgm/: Cargo.toml
lib_um_crypto_rust/um_crypto/mg3d/: Cargo.toml  Readme.MD
lib_um_crypto_rust/um_crypto/qmc/: Cargo.toml
lib_um_crypto_rust/um_crypto/utils/: Cargo.toml
lib_um_crypto_rust/um_crypto/xmly/: Cargo.toml  Readme.MD
lib_um_crypto_rust/um_wasm/: .gitignore  README.md
lib_um_crypto_rust/um_wasm/src/: errors.rs
lib_um_crypto_rust/um_wasm_loader/: .gitignore  build.js  ci_publish.sh  rollup.config.mjs  test.cjs  test.mjs
lib_um_crypto_rust/um_wasm_loader/src/: loader.mjs
simple-server/: config  packed-refs
simple-server/objects/pack/: pack-81d482627835403c857fb51380122500e3a0b68d.idx  pack-81d482627835403c857fb51380122500e3a0b68d.pack  pack-81d482627835403c857fb51380122500e3a0b68d.rev
testsuite/: .gitattributes  README.md  config  packed-refs
testsuite/kgm/: 03-crypto_v3-slot_1-flac.kgma
testsuite/kwm/: 03-wma.kwm  04-mp3.kwm
testsuite/ncm/: 01-mp3.ncm  02-flac.ncm
testsuite/objects/pack/: pack-21005862ff39eccd33f0b3f8d91f2af25fb9569a.idx  pack-21005862ff39eccd33f0b3f8d91f2af25fb9569a.pack  pack-21005862ff39eccd33f0b3f8d91f2af25fb9569a.rev
testsuite/qmc/: 01-static_cipher.qmc0  02-static_cipher.qmcflac  05-map_cipher-key_v1_raw.mflac  06-map_cipher-key_v2_raw.mflac  08-rc4_cipher-key_v1_qtag.mflac0  10-map_cipher-key_none_stag.mflac0  11-rc4_cipher-key_v2_raw.mmp4
testsuite/ximalaya/: 01-x2m-m4a.x2m
tmp/cli/: .gitignore  CHANGELOG.md  README.md  go.mod  go.sum
tmp/cli/misc/: repack.sh
tmp/go-mmkv/: mmkv.go
tmp/hwyy-frida-dump/: .gitignore  LICENSE  com.huawei.music.js  decrypt.py
tmp/joox-crypto/: README.md  joox-decrypt  package.json  pnpm-lock.yaml
tmp/kgg-dec/: .gitignore  Jenkinsfile  README.MD
tmp/kgg-dec/src/: jobs.hpp  main.cpp
tmp/lib_um_crypto_rust/: .gitignore  Cargo.toml  Changelog.md  LICENSE_APACHE  README.MD  build.sh  bump_versions.py
tmp/lib_um_crypto_rust/um_audio/: Cargo.toml
tmp/lib_um_crypto_rust/um_cli/: Cargo.toml
tmp/lib_um_crypto_rust/um_cli/src/: buffered_decrypt.rs  main.rs
tmp/lib_um_crypto_rust/um_cli/src/cmd/: joox.rs  kgm.rs  mg3d.rs  mod.rs  ncm.rs  qmc1.rs  qmc2.rs  qtfm.rs  xiami.rs  xmly.rs
tmp/lib_um_crypto_rust/um_wasm/: Cargo.toml
tmp/lib_um_crypto_rust/um_wasm/src/: errors.rs  lib.rs
tmp/lib_um_crypto_rust/um_wasm/src/exports/: audio.rs  joox.rs  mg3d.rs  qrc.rs
tmp/lib_um_crypto_rust/um_wasm_loader/: .npmrc  Readme.MD  Release.MD  ci_publish.sh  package.json  pnpm-lock.yaml
tmp/testsuite/kgm/: 01-crypto_v3-slot_1-mp3.kgm  02-crypto_v3-slot_1-flac.vpr  04-crypto_v3-slot_1-dff-truncated.vpr
tmp/testsuite/kwm/: 01-m4a.kwm  02-flac.kwm
tmp/testsuite/qmc/: 03-static_cipher.qmcogg  04-static_cipher.tkm  07-map_cipher-key_v1_qtag.mgg1  09-rc4_cipher-key_v1_raw.mgg
tmp/testsuite/tm/: 01-pure-mp3.tm0  02-header-m4a.tm2  03-header-m4a.tm6
tmp/testsuite/xiami/: 01-wav.xm  02-m4a.xm  (+2 more)
tmp/um-react/: .editorconfig  .gitignore  .npmrc  Dockerfile  README.MD  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.prod.json  vite.config.ts
tmp/um-react-wry/: Cargo.toml  Dockerfile  README.MD  build.rs
tmp/um-react-wry/src/: stub.rs
tmp/web/: .gitignore  Dockerfile  LICENSE  README.md  extension-manifest.json  package-lock.json  package.json
um-react/: .env  README.MD  config  package.json  packed-refs  pnpm-lock.yaml
um-react-wry/: .gitignore  build.sh  config  packed-refs
um-react-wry/src/: builder.rs  stub.rs
um-react/docs/: develop-with-um_crypto.zh.md
um-react/scripts/: deploy.sh
web/: config  packed-refs
(+335 files in other folders)
