[package]
name = "um-react-wry"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wry = { version = "0.52", optional = true }
tao = { version = "0.34", default-features = false, optional = true, features = [
    "rwh_05",
    "rwh_06",
] }
image = { version = "0.25", default-features = true, optional = true, features = [
    "webp",
    "ico",
] }

zip = { version = "4.2" }
http = { version = "1.3" }
clap = { version = "4.5", features = ["derive"] }
dirs = { version = "6.0" }
once_cell = { version = "1.21" }

[build-dependencies]
winres = "0.1"

[features]
stub-pkgs = ["wry", "tao", "image"]

[[bin]]
name = "um-react-wry-stub"
path = "src/stub.rs"
required-features = ["stub-pkgs"]

[[bin]]
name = "builder"
path = "src/builder.rs"

[profile.release]
opt-level = "z"
debug = false
lto = true
strip = true
